examples/test/testpolicy6908.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6908
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key6: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value9
      podSelector:
        matchLabels:
          key43: value9
          key2: value23
          key29: value13
